# structured_prediction_for_segmentation

./: CMakeLists.txt  CMakeLists_common.txt  Readme.md  config_cvpr13.txt  config_miccai14.txt
core/: Config.cpp  Config.h  F_Bias.cpp  F_Bias.h  F_ColorHistogram.cpp  F_ColorHistogram.h  F_Combo.cpp  F_Combo.h  F_Dft.cpp  F_Dft.h  F_Filter.cpp  F_Filter.h  F_Gaussian.cpp  F_Gaussian.h  F_Glcm.cpp  F_Glcm.h  F_GradientStats.cpp  F_GradientStats.h  F_Histogram.cpp  F_Histogram.h  F_Lbp.cpp  F_Lbp.h  F_LoadFromFile.cpp  F_LoadFromFile.h  F_OrientedHistogram.cpp  F_OrientedHistogram.h  F_Position.cpp  F_Position.h  F_Precomputed.cpp  F_Precomputed.h  F_Sift.cpp  F_Sift.h  Feature.cpp  Feature.h  Histogram.cpp  Histogram.h  Slice.cpp  Slice.h  Slice3d.cpp  Slice3d.h  (+57 more)
core/svm_light/: Makefile  svm_classify.c  svm_common.c  svm_common.h  svm_hideo.c  svm_learn.c  svm_learn_main.c
core/svm_struct/: Makefile  iterative_svm_struct_main.c  svm_struct_classify.c  svm_struct_common.c  svm_struct_common.h  svm_struct_learn.c  svm_struct_learn.h  svm_struct_main.c  svm_struct_main_loss_update.c
data/: sample_config.txt
data/config/: colormap_mitochondria.txt  colormap_mitochondria_2classes.txt
lib/: itkStructureTensorRecursiveGaussianImageFilter.h
lib/graphCuts/: kgraph.h  kgraph.tpp  maxflow.h  maxflow.tpp
lib/libDAI024/: CMakeLists.txt  Makefile  Makefile.ALL  Makefile.conf.bak
lib/libDAI024/include/dai/: clustergraph.h  properties.h  util.h
lib/libDAI024/src/: alldai.cpp  bbp.cpp  bipgraph.cpp  bp.cpp  bp_dual.cpp  cbp.cpp  clustergraph.cpp  factorgraph.cpp  fbp.cpp  gibbs.cpp  graph.cpp  hak.cpp  jtree.cpp  lc.cpp  mf.cpp  regiongraph.cpp  trwbp.cpp  util.cpp  weightedgraph.cpp
lib/slic/: CMakeLists.txt  LKM.cpp  LKM.h  Makefile  generateSuperpixels.py  make_mex.sh  readSupervoxelCube.m  superpixel_test.cpp  supervoxel_test.cpp  utils.h
lib/zlib-1.2.3-lib/include/: zconf.h
matlab/: readme.txt
matlab/mex/: buildmex.m  buildmex.sh  mex_predict.cpp
matlab/src/: test_predict.m
misc/patches/: patch_itkSymmetricEigenAnalysis
scripts/: configIO.py  plotAll.py  plotData.py  plotLegend.py  sortScore.py
tools/: CMakeLists.txt  exportFeatures.cpp  exportOverfeatFeatures.cpp
